--- a/index.html
+++ b/index.html
@@ -1913,11 +1913,11 @@
         const projectsData = [
             {
                 id: 1,
-                title: "Network Scanner Pro",
-                description: "Advanced network scanning tool with vulnerability detection and reporting features.",
-                image: "https://images.unsplash.com/photo-1558494949-ef010cbdcc31?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80",
+                title: "Woosong Guide",
+                description: "AI Chatbot Project for Woosong University Students – 2025 Edition.",
+                image: "https://plus.unsplash.com/premium_photo-1682023587356-86065925727a?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Y2hhdGJvdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&q=60&w=600",
                 price: "$49.99",
-                previewUrl: "network-scanner.html",
+                previewUrl: "woosongguide.html",
                 category: "Security Tools"
             },
             {
@@ -2861,3 +2861,4 @@
     </script>
 </body>
 </html>
+
