Update fmt.Println message to Goodbye World

--- a/index.html
+++ b/index.html
@@ -1319,7 +1319,7 @@
             <div class="about-container">
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="parash.jpg" alt="Paras Karki">
+                        <img src="Parash.jpg" alt="Paras Karki">
                     </div>
                     <div class="about-text">
                         <h2 data-i18n="securityResearcher">Security Researcher & Developer</h2>
@@ -2861,4 +2861,5 @@
     </script>
 </body>
 </html>
+
 
