--- a/index.html
+++ b/index.html
@@ -1206,7 +1206,7 @@
         <!-- Tools Container -->
         <div class="tools-container" id="toolsContainer">
             <ul class="tools-list">
-                <li class="tool-item"><a href="bg-remover.html">Background Remover</a></li>
+                <li class="tool-item"><a href="randomizer.html">Randomizer</a></li>
                 <li class="tool-item"><a href="jpg-to-png.html">JPG to PNG Converter</a></li>
                 <li class="tool-item"><a href="image-compressor.html">Image Compressor</a></li>
                 <li class="tool-item"><a href="pdf-merger.html">PDF Merger</a></li>
@@ -2861,5 +2861,6 @@
     </script>
 </body>
 </html>
+
 
 
