--- a/randomizer.html
+++ b/randomizer.html
@@ -713,7 +713,7 @@ Grapes</textarea>
         <!-- For brevity, I've included only 3 tools in this example -->
 
         <footer>
-            <p>Advanced Randomizer &copy; 2023 | Made with <i class="fas fa-heart" style="color: var(--accent);"></i></p>
+            <p>Advanced Randomizer &copy; 2025 | Made by Parash with <i class="fas fa-heart" style="color: var(--accent);"></i></p>
         </footer>
     </div>
 
@@ -1001,4 +1001,5 @@ Grapes</textarea>
         });
     </script>
 </body>
+
 </html>
