--- a/index.html
+++ b/index.html
@@ -1207,7 +1207,7 @@
         <div class="tools-container" id="toolsContainer">
             <ul class="tools-list">
                 <li class="tool-item"><a href="randomizer.html">Randomizer</a></li>
-                <li class="tool-item"><a href="jpg-to-png.html">JPG to PNG Converter</a></li>
+                <li class="tool-item"><a href="cmidterm.html">C Midterm Project</a></li>
                 <li class="tool-item"><a href="image-compressor.html">Image Compressor</a></li>
                 <li class="tool-item"><a href="pdf-merger.html">PDF Merger</a></li>
                 <li class="tool-item"><a href="password-generator.html">Password Generator</a></li>
@@ -2861,6 +2861,7 @@
     </script>
 </body>
 </html>
+
 
 
 
