--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@
             <li class="menu-item"><a href="#" data-section="about">> <span data-i18n="about">About Me</span></a></li>
             <li class="menu-item"><a href="Freecourse.html">> <span data-i18n="freeCourses">Free Courses</span></a></li>
             <li class="menu-item"><a href="EarnMoney.html">> <span data-i18n="earnMoney">Earn Money</span></a></li>
-            <li class="menu-item"><a href="tools.html">> <span data-i18n="allTools">All Tools</span></a></li>
+            <li class="menu-item"><a href="toolstore.html">> <span data-i18n="allTools">ToolStore</span></a></li>
         </ul>
     </div>
 
@@ -2861,6 +2861,7 @@
     </script>
 </body>
 </html>
+
 
 
 
