--- a/index.html
+++ b/index.html
@@ -1996,11 +1996,11 @@ body.has-offer-banner header {
         const projectsData = [
             {
                 id: 1,
-                title: "Network Scanner Pro",
-                description: "Advanced network scanning tool with vulnerability detection and reporting features.",
+                title: "C Midterm Project",
+                description: "Woosong C midterm project for AI and Big Data department.",
                 image: "https://images.unsplash.com/photo-1558494949-ef010cbdcc31?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80",
                 price: "$49.99",
-                previewUrl: "network-scanner.html",
+                previewUrl: "cmidterm.html",
                 category: "Security Tools"
             },
             {
@@ -3060,3 +3060,4 @@ document.addEventListener('DOMContentLoaded', function() {
     </div>
 </div>
 </html>
+
