--- a/index.html
+++ b/index.html
@@ -2247,7 +2247,7 @@
             <li class="menu-item"><a href="#" data-section="projects">> <span data-i18n="projects">My Projects</span></a></li>
             <li class="menu-item"><a href="#" data-section="music">> <span>My Music</span></a></li>
             <li class="menu-item"><a href="#" data-section="about">> <span data-i18n="about">About Me</span></a></li>
-            <li class="menu-item"><a href="Freecourse.html">> <span data-i18n="freeCourses">Free Courses</span></a></li>
+            <li class="menu-item"><a href="Topik-1.html">> <span data-i18n="freeCourses">Topik-1</span></a></li>
             <li class="menu-item"><a href="EarnMoney.html">> <span data-i18n="earnMoney">Earn Money</span></a></li>
             <li class="menu-item"><a href="./ToolStore/index.html">> <span data-i18n="allTools">All Tools</span></a></li>
         </ul>
@@ -4845,6 +4845,7 @@
     </script>
 </body>
 </html>
+
 
 
 
